# dory-interactive-cpp

./: .gitignore  BENCHMARK.md  CMakeLists.txt  README.md
bench/: bench_dory.cpp
examples/: dory_demo.cpp
include/dory/: backend.hpp  challenge_channel.hpp  dory_api.hpp  dory_batch.hpp  dory_precomp.hpp  dory_prover.hpp  dory_types.hpp  dory_verifier.hpp  gt_lincomb.hpp  profiling.hpp  scalar_product.hpp  serialization.hpp  transcript_counts.hpp  vector_ops.hpp
scripts/: run_benchmarks.bat
src/: backend_mcl.cpp  challenge_channel.cpp  dory_api.cpp  dory_batch.cpp  dory_precomp.cpp  dory_prover.cpp  dory_verifier_deferred.cpp  dory_verifier_eager.cpp  gt_lincomb.cpp  profiling.cpp  scalar_product.cpp  serialization.cpp  transcript_counts.cpp  vector_ops.cpp
tests/: check_benchmark_csv.cmake  test_backend.cpp  test_dory_api.cpp  test_dory_batch.cpp  test_dory_deferred_vs_eager.cpp  test_dory_precomp_optimized.cpp  test_dory_recursive.cpp  test_gt_multiexp.cpp  test_pair_product_optimized.cpp  test_profile_counts.cpp  test_scalar_product.cpp  test_serialization.cpp  test_transcript_counts.cpp
